Added skybox, implemented smooth rotation

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: white;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -20,7 +20,7 @@ body {
   height: 100%;
   transform: translate(-50%, -50%) translateZ(150vw);
   transform-style: preserve-3d;
-  transition: transform 0.5s;
+  transition-timing-function: ease-in-out;
 }
 
 .container {
@@ -49,10 +49,56 @@ body {
   outline-offset: -1vmin;
 }
 
-.expand {
-  animation: zoomIn 0.3s ease-in forwards;
+.Skybox-position {
+  position: relative;
+  transform: translate3d(0vw, 0vw, 200vw);
+  transform-style: preserve-3d;
+  transition-timing-function: ease-in-out;
 }
 
-.shrink {
-  animation: zoomOut 0.3s ease-in forwards;
+.Skybox-rotor-x,
+.Skybox-rotor-y {
+  transform-style: preserve-3d;
+  transform-origin: center center -165vw;
+}
+
+.Skybox-faces {
+  position: relative;
+  width: 100vw;
+  height: 100vw;
+  transform-style: preserve-3d;
+}
+
+.Skybox-face {
+  position: absolute;
+  display: block;
+  width: 200vw;
+  height: 200vw;
+  background-image: url("./assets/pictures/stars.png");
+  background-size: 15vw;
+  background-repeat: repeat;
+}
+
+.Skybox-face-left {
+  transform: translate3d(-105vw,0vw,-150vw) rotateY(90deg);
+}
+
+.Skybox-face-right {
+  transform: translate3d(105vw,0,-150vw) rotateY(-90deg);
+}
+
+.Skybox-face-front {
+  transform: translate3d(0,0,-200vw) rotate3d(0,1,0,180deg);
+}
+
+.Skybox-face-back {
+  transform: translate3d(0,0,-60vw);
+}
+
+.Skybox-face-up {
+  transform: translate3d(-5vw,-95vw,-150vw) rotate3d(1,0,0,-90deg);
+}
+
+.Skybox-face-down {
+  transform: translate3d(-5vw,95vw,-150vw) rotate3d(1,0,0,90deg);
 }
