--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,18 @@ body {
   padding: 0;
 }
 
+.cursorLeft {
+  animation: 0.25s cursorTransitionLeft ease-in-out forwards;
+}
+
+.cursorCenter {
+  cursor: url('./assets/pointers/center-arrow.png') 64 64, auto;
+}
+
+.cursorRight {
+  animation: 0.25s cursorTransitionRight ease-in-out forwards;
+}
+
 .carousel {
   position: absolute;
   top: 50%;
@@ -49,6 +61,11 @@ body {
   outline-offset: -1vmin;
 }
 
+.container_image {
+  height: 100%;
+  width: 100%;
+}
+
 .Skybox-position {
   position: relative;
   transform: translate3d(0vw, 0vw, 200vw);
@@ -60,6 +77,7 @@ body {
 .Skybox-rotor-y {
   transform-style: preserve-3d;
   transform-origin: center center -165vw;
+  transition-timing-function: ease-in-out;
 }
 
 .Skybox-faces {
@@ -101,4 +119,24 @@ body {
 
 .Skybox-face-down {
   transform: translate3d(-5vw,95vw,-150vw) rotate3d(1,0,0,90deg);
+}
+
+@keyframes cursorTransitionLeft {
+  from {
+    cursor: url('./assets/pointers/center-arrow.png') 64 64, auto;
+  }
+
+  to {
+    cursor: url('./assets/pointers/center-left-arrow.png') 64 64, auto;
+  }
+}
+
+@keyframes cursorTransitionRight {
+  from {
+    cursor: url('./assets/pointers/center-arrow.png') 64 64, auto;
+  }
+
+  to {
+    cursor: url('./assets/pointers/center-right-arrow.png') 64 64, auto;
+  }
 }
